2005-09-21  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* debian/changelog: Bump version to 0.1.6.  Document run-setup
	changes for Debian Bug #329403.

	* schroot/schroot.conf.5.in: Document "run-setup" configuration
	option.

	* schroot/sbuild-session.c (sbuild_session_run): Only run setup
	scripts if enabled in the chroot configuration.

	* schroot/sbuild-chroot.c
	(sbuild_chroot_class_init): Add "run-setup" property, and
	associated accessors.
	(sbuild_chroot_new_from_keyfile): Add support for G_TYPE_BOOLEAN
	properties as configuration options.

	* schroot/sbuild-chroot.h (struct _SbuildChroot): Add run_setup
	member.

2005-09-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.c
	(sbuild_chroot_new_from_keyfile): Fix a memory leak during chroot
	type identification.  Reorganise code to make layout more logical.
	(sbuild_chroot_print_details): Format detail listing to make it
	more readable, in the same style as used by the LVM tools.

	* schroot/sbuild-config.c (sbuild_config_load): Only add chroots
	to the SbuildConfig if they were successfully constructed.

2005-09-18  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c (sbuild_session_class_init): Add a new
	session-id property and associated accessors, which handle
	conversions between a string and uuid_t.

	* schroot/sbuild-session.h (struct _SbuildSession): Add a new
	session_id member containing the session UUID.

	* schroot/sbuild-config.c
	(sbuild_config_new_from_file): New function to replace
	sbuild_config_new.
	(sbuild_config_new_from_directory): New function to load a set of
	configuration files from a directory.
	(sbuild_config_class_init): config-file property is no longer
	readable.  Added new contruct only and write-only config-directory
	property.
	(sbuild_config_set_config_directory): New function to read a
	directory and load config files.
	(sbuild_config_load): Pass back the chroot list as an OUT
	parameter rather than a return value, to allow reusing the same
	list.